cmake_minimum_required(VERSION 3.7)
project(mit6828_lab)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        boot/boot.S
        boot/main.c
        fs/bc.c
        fs/fs.c
        fs/fs.h
        fs/fsformat.c
        fs/ide.c
        fs/serv.c
        fs/test.c
        inc/args.h
        inc/assert.h
        inc/elf.h
        inc/env.h
        inc/error.h
        inc/fd.h
        inc/fs.h
        inc/kbdreg.h
        inc/lib.h
        inc/memlayout.h
        inc/mmu.h
        inc/partition.h
        inc/stab.h
        inc/stdarg.h
        inc/stdio.h
        inc/string.h
        inc/syscall.h
        inc/trap.h
        inc/types.h
        inc/x86.h
        kern/console.c
        kern/console.h
        kern/cpu.h
        kern/entry.S
        kern/entrypgdir.c
        kern/env.c
        kern/env.h
        kern/init.c
        kern/kclock.c
        kern/kclock.h
        kern/kdebug.c
        kern/kdebug.h
        kern/lapic.c
        kern/monitor.c
        kern/monitor.h
        kern/mpconfig.c
        kern/mpentry.S
        kern/picirq.c
        kern/picirq.h
        kern/pmap.c
        kern/pmap.h
        kern/printf.c
        kern/sched.c
        kern/sched.h
        kern/spinlock.c
        kern/spinlock.h
        kern/syscall.c
        kern/syscall.h
        kern/trap.c
        kern/trap.h
        kern/trapentry.S
        lib/args.c
        lib/console.c
        lib/entry.S
        lib/exit.c
        lib/fd.c
        lib/file.c
        lib/fork.c
        lib/fprintf.c
        lib/ipc.c
        lib/libmain.c
        lib/pageref.c
        lib/panic.c
        lib/pfentry.S
        lib/pgfault.c
        lib/pipe.c
        lib/printf.c
        lib/printfmt.c
        lib/readline.c
        lib/spawn.c
        lib/string.c
        lib/syscall.c
        lib/wait.c
        user/badsegment.c
        user/breakpoint.c
        user/buggyhello.c
        user/buggyhello2.c
        user/cat.c
        user/divzero.c
        user/dumbfork.c
        user/echo.c
        user/evilhello.c
        user/fairness.c
        user/faultalloc.c
        user/faultallocbad.c
        user/faultbadhandler.c
        user/faultdie.c
        user/faultevilhandler.c
        user/faultio.c
        user/faultnostack.c
        user/faultread.c
        user/faultreadkernel.c
        user/faultregs.c
        user/faultwrite.c
        user/faultwritekernel.c
        user/forktree.c
        user/hello.c
        user/icode.c
        user/idle.c
        user/init.c
        user/initsh.c
        user/ls.c
        user/lsfd.c
        user/num.c
        user/pingpong.c
        user/pingpongs.c
        user/primes.c
        user/primespipe.c
        user/sendpage.c
        user/sfork.c
        user/sh.c
        user/softint.c
        user/spawnfaultio.c
        user/spawnhello.c
        user/spawninit.c
        user/spin.c
        user/stresssched.c
        user/testbss.c
        user/testfdsharing.c
        user/testfile.c
        user/testfloat.c
        user/testkbd.c
        user/testmalloc.c
        user/testpipe.c
        user/testpiperace.c
        user/testpiperace2.c
        user/testptelibrary.c
        user/testpteshare.c
        user/testshell.c
        user/writemotd.c
        user/yield.c)

include_directories(.)
include_directories(boot)
include_directories(fs)
include_directories(inc)
include_directories(kern)
include_directories(lib)
include_directories(user)

add_executable(mit6828_lab ${SOURCE_FILES})